# rust-time-tracker

./: Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  build.sh  check_services.sh  env.example  setup.sh  test_backend.sh  test_performance.sh
client/os-client/: Cargo.toml
client/os-client/src/: main.rs
database/: schema.sql
docker/: docker-compose.yml
docs/: BACKEND_ANALYSIS.md  BACKEND_TESTING_GUIDE.md  DEVELOPMENT.md  TASKS.md
proto/: Cargo.toml  auth.proto  build.rs  screenshot.proto
proto/src/: activity.rs  auth.rs  lib.rs  screenshot.rs
services/activity-service/: Cargo.toml  Dockerfile  activity.proto
services/activity-service/src/: main.rs
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: main.rs
services/auth-service/: Cargo.toml  Dockerfile  build.rs
services/auth-service/src/: main.rs
services/screenshot-service/: Cargo.toml  Dockerfile
services/screenshot-service/src/: main.rs
