[workspace]
members = [
    "services/auth-service",
    "services/activity-service", 
    "services/screenshot-service",
    "services/api-gateway",
    "client/os-client"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Time Tracker Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
base64 = "0.21"
jwt = "0.16"
sha2 = "0.10"
hex = "0.4"
image = "0.24"
x11 = "2.21"
wayland-client = "0.31"
egui = "0.23"
eframe = "0.23"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"
tokio-stream = "0.1"
hyper = { version = "0.14", features = ["full"] }
bcrypt = "0.15"